[project]
name = "audio-explorers-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "noisereduce>=3.0.3",
    "numpy>=2.2.4",
    "openai>=1.74.0",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "pyroomacoustics==0.7.7",
    "resampy>=0.4.3",
    "ssspy>=0.1.7",
    "webrtcvad>=2.0.10",
]
